# awesome_wotlk_injection

./: AutoInject_Awesome_Prod.bat  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  VERBOSITY_README.md  detours_fix.h  run_continuous_monitor.bat  run_injector.bat  run_with_logging.bat  test_verbose.bat
.github/workflows/: build-injector.yml  build-pr34.yml  windows-release.yml
addons/AwesomeCVar/: Core.lua
docs/: anti_detection_improvements.md  api_reference.md  compilation_fixes.md  compilation_fixes_round2.md  example_evasion_log.md  how_to_run.md  readme.md  ultimate_evasion_techniques.md
src/: CMakeLists.txt
src/AwesomeWotlkInjector/: CMakeLists.txt  Injector.cpp  ManualMapper.cpp  ManualMapper.h
src/AwesomeWotlkLib/: AdvancedEvasion.cpp  AdvancedEvasion.h  AntiDetection.cpp  AntiDetection.h  BugFixes.cpp  BugFixes.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Entry.cpp  EvasionLogger.cpp  EvasionLogger.h  GameClient.h  Hooks.cpp  Hooks.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Misc.cpp  Misc.h  NamePlates.cpp  NamePlates.h  Spell.cpp  Spell.h  UnitAPI.cpp  UnitAPI.h  Utils.cpp  Utils.h  VoiceChat.cpp  VoiceChat.h
src/AwesomeWotlkPatch/: CMakeLists.txt  Main.cpp  Patch.h  Utils.h
